# rust-basics

./: .env.example  Cargo.toml  Dockerfile  db.sqlite
src/: main.rs  models.rs  router.rs
src/models/: post.rs  user.rs
src/services/: post_service.rs
views/: 404.html  index.html
