[package]
name = "basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"
rusqlite = "0.29.0"
log = "0.4.20"
env_logger = "0.10.0"
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"] }
